--- a/css/style.css
+++ b/css/style.css
@@ -24,3 +24,9 @@ figcaption {
   /*video at 19:24*/
 }
 /* class selector(applied to as many elements as you like)*/
+.milk-text{
+font : bold 2.6em 'Elsie Swash Caps', cursive;
+color : white;
+text-shadow: 0 2px 3px #000;
+
+}
