--- a/css/style.css
+++ b/css/style.css
@@ -42,3 +42,8 @@ text-shadow: 0 2px 3px #000;
 #logo h2 {
   font-family:  : 'Elsie Swash Caps', cursive;
 }
+/* Pseudo Selector */
+#details a:link , #details a:visited{
+  color : black;
+  text-decoration:  none;
+}
