--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,15 @@ text-shadow: 0 2px 3px #000;
   font-family:  : 'Elsie Swash Caps', cursive;
 }
 /* Pseudo Selector */
-#details a:link , #details a:visited{
+#details a:link , #details a:visited {
   color : black;
   text-decoration:  none;
+}
+
+#details a:hover {
+  color : black;
+  text-decoration: underline;
+}
+#details a:active{
+  color: red;
 }
